--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -227,17 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Percentage of valid English words: 36.10%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Task 3\n",
     "\n",
@@ -250,7 +242,12 @@
     "        valid_words = set(word.strip().lower() for word in f.readlines())\n",
     "    return valid_words\n",
     "\n",
-    "\n"
+    "# Step 2: Extract words from the generated text\n",
+    "def extract_words(text):\n",
+    "    # Use regular expression to extract words, removing non-alphabetic characters\n",
+    "    words = re.findall(r'\\b[A-Za-z]+\\b', text)\n",
+    "    # Convert to lowercase for case-insensitive matching\n",
+    "    return [word.lower() for word in words]\n"
    ]
   }
  ],
