Method for percentage created but not fully working

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -247,7 +247,17 @@
     "    # Use regular expression to extract words, removing non-alphabetic characters\n",
     "    words = re.findall(r'\\b[A-Za-z]+\\b', text)\n",
     "    # Convert to lowercase for case-insensitive matching\n",
-    "    return [word.lower() for word in words]\n"
+    "    return [word.lower() for word in words]\n",
+    "\n",
+    "# Step 3: Calculate the percentage of valid words in the generated text\n",
+    "def calculate_word_percentage(generated_text, valid_words):\n",
+    "    words_in_text = extract_words(generated_text)  # Get the words from the generated text\n",
+    "    total_words = len(words_in_text)  # Total number of words\n",
+    "    valid_word_count = sum(1 for word in words_in_text if word in valid_words)  # Count how many words are valid\n",
+    "    if total_words == 0:\n",
+    "        return 0  # Avoid division by zero\n",
+    "    # Calculate percentage of valid words\n",
+    "    return (valid_word_count / total_words) * 100"
    ]
   }
  ],
