Combining both methods together

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -257,7 +257,11 @@
     "    if total_words == 0:\n",
     "        return 0  # Avoid division by zero\n",
     "    # Calculate percentage of valid words\n",
-    "    return (valid_word_count / total_words) * 100"
+    "    return (valid_word_count / total_words) * 100\n",
+    "\n",
+    "# Step 4: Use the functions to load the words and calculate the percentage\n",
+    "valid_words = load_english_words('words.txt')  # Load the list of valid English words\n",
+    "generated_text = generate_text(trigram_model, length=10000)  # Generate the 10,000 character string"
    ]
   }
  ],
