Task 4 started with export to json method created

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,21 +210,21 @@
     "\n",
     "import re\n",
     "\n",
-    "# Step 1: Read the list of valid English words from words.txt\n",
+    "# Read the list of valid English words from words.txt\n",
     "def load_english_words(file_path):\n",
     "    with open(file_path, 'r') as f:\n",
     "        # Store the words in a set for quick lookup\n",
     "        valid_words = set(word.strip().lower() for word in f.readlines())\n",
     "    return valid_words\n",
     "\n",
-    "# Step 2: Extract words from the generated text\n",
+    "# Extract words from the generated text\n",
     "def extract_words(text):\n",
     "    # Use regular expression to extract words, removing non-alphabetic characters\n",
     "    words = re.findall(r'\\b[A-Za-z]+\\b', text)\n",
     "    # Convert to lowercase for case-insensitive matching\n",
     "    return [word.lower() for word in words]\n",
     "\n",
-    "# Step 3: Calculate the percentage of valid words in the generated text\n",
+    "# Calculate the percentage of valid words in the generated text\n",
     "def calculate_word_percentage(generated_text, valid_words):\n",
     "    words_in_text = extract_words(generated_text)  # Get the words from the generated text\n",
     "    total_words = len(words_in_text)  # Total number of words\n",
@@ -241,8 +241,24 @@
     "# Calculate the percentage of valid English words\n",
     "percentage_valid_words = calculate_word_percentage(generated_text, valid_words)\n",
     "\n",
-    "# Print the result\n",
+    "# Print out percentage \n",
     "print(f\"Percentage of valid English words: {percentage_valid_words:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task 4\n",
+    "import json\n",
+    "\n",
+    "# Export the trigram model as JSON\n",
+    "def export_trigram_model_to_json(trigram_model, file_path):\n",
+    "    with open(file_path, 'w') as json_file:\n",
+    "        # Convert the trigram model (a dictionary) to JSON and save it\n",
+    "        json.dump(trigram_model, json_file, indent=4)"
    ]
   }
  ],
