Export to json method being called. not working yet

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -258,7 +258,13 @@
     "def export_trigram_model_to_json(trigram_model, file_path):\n",
     "    with open(file_path, 'w') as json_file:\n",
     "        # Convert the trigram model (a dictionary) to JSON and save it\n",
-    "        json.dump(trigram_model, json_file, indent=4)"
+    "        json.dump(trigram_model, json_file, indent=4)\n",
+    "\n",
+    "# Call the function to export the model\n",
+    "export_trigram_model_to_json(trigram_model, 'trigrams.json')\n",
+    "\n",
+    "# Output message to confirm that the file was saved\n",
+    "print(\"Trigram model has been exported to trigrams.json\")"
    ]
   }
  ],
