Outputting to json sucessfully

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -264,7 +264,7 @@
     "export_trigram_model_to_json(trigram_model, 'trigrams.json')\n",
     "\n",
     "# Output message to confirm that the file was saved\n",
-    "print(\"Trigram model has been exported to trigrams.json\")"
+    "print(\"Trigram model has been exported to trigrams.json\")\n"
    ]
   }
  ],
