Titles added to markdown

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 1: Building a trigram model from Project Gutenberg books\n",
+    "# Task 1: Building a trigram model from Project Gutenberg books\n",
     "\n",
     "A trigram model is a language model that looks at sequences of three characters (called trigrams) in a text. It helps to capture character-level dependencies in text, and it is commonly used in text generation and natural language processing (NLP).\n",
     "\n",
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 1 Breakdown:\n",
+    "## Task 1 Breakdown:\n",
     "1. The solution begins by defining the function read_text, which reads the contents of a text file into a string."
    ]
   },
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 2 Breakdown:\n",
+    "## Task 2 Breakdown:\n",
     "1. Task 2 starts by defining the function get_next_char, which takes the last two characters of a string and finds all matching trigrams from the trigram model.\n",
     "2. This function then selects the next character based on the frequency of the matching trigrams, using weighted random selection."
    ]
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 3 Breakdown:\n",
+    "## Task 3 Breakdown:\n",
     "1. Task 3 begins by defining the function load_english_words to load valid English words from a file (words.txt) and store them in a set for quick lookups."
    ]
   },
@@ -362,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 4 Breakdown:\n",
+    "## Task 4 Breakdown:\n",
     "1. Task 4 uses the json module to save the trigram model as a JSON file.\n",
     "2. The function export_trigram_model_to_json converts the trigram model into JSON format."
    ]
